FIX: Fixed layout problem on "activate changes" page

--- a/web/htdocs/wato.css
+++ b/web/htdocs/wato.css
@@ -942,6 +942,7 @@ div.varname {
 
 .wato div.error pre div.err {
     background-color: yellow;
+    color: #000;
     font-weight: bold;
     width: 100%;
     margin: 0;
